fix common content header wrapper z-index

--- a/src/pages/common/components/CommonContent/CommonContent.module.scss
+++ b/src/pages/common/components/CommonContent/CommonContent.module.scss
@@ -24,7 +24,7 @@
 .contentHeaderWrapper {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   padding-top: 3rem;
   background-color: var(--page-bg-color);
 
